# service-monitor

./: CONFIGURATION.md  Cargo.toml  config.json  readme.md
documentation/: CONFIGURATION.md
src/: config.rs  main.rs  state.rs
src/alert/: mod.rs  slack.rs
src/dashboard/: mod.rs  routes.rs
src/models/: incident.rs  mod.rs  service.rs
src/monitor/: dns_check.rs  http_check.rs  mod.rs  ssl_check.rs  tcp_check.rs
src/utils/: net.rs
